src/objects/Hub_Contact__c.object
<CustomObject>
    <description>CMD Hub Customer Contacts are stored in this Object</description>
    <fields>
        <fullName>Email__c</fullName>
        <description>Hub Contact - Email</description>
        <externalId>true</externalId>
        <inlineHelpText>Hub Contact - Email</inlineHelpText>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First Name</description>
        <inlineHelpText>First Name</inlineHelpText>
        <label>First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last Name</description>
        <inlineHelpText>Last Name</inlineHelpText>
        <label>Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Life_Cycle__c</fullName>
        <description>Life Cycle of Contact</description>
        <inlineHelpText>Life Cycle of Contact</inlineHelpText>
        <label>Life Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <description>Temporarily field for data Migration</description>
        <externalId>true</externalId>
        <label>User Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>GCM Contact</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C{000000}</displayFormat>
        <label>GCM Contact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GCM Contacts</pluralLabel>
    <recordTypes>
        <fullName>External_Contact</fullName>
        <active>true</active>
        <description>External Contact</description>
        <label>External Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_Contact</fullName>
        <active>true</active>
        <description>Internal Contact</description>
        <label>Internal Contact</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Email_Mandatory</fullName>
        <active>true</active>
        <description>Email is mandatory to define a contact.</description>
        <errorConditionFormula>ISBLANK( Email__c )</errorConditionFormula>
        <errorDisplayField>Email__c</errorDisplayField>
        <errorMessage>Email is mandatory to define a contact.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Last_Name_Mandatory</fullName>
        <active>false</active>
        <description>Last name is mandatory to define a contact.</description>
        <errorConditionFormula>ISBLANK(  Last_Name__c  )</errorConditionFormula>
        <errorDisplayField>Last_Name__c</errorDisplayField>
        <errorMessage>Last name is mandatory to define a contact.</errorMessage>
    </validationRules>
</CustomObject>